update code to java 21